@@ -1,2 +1,3 @@
 name=first user          , accs=320 byte=\001m\000\212
 name=first user          , byte=(1)(155)(0)(212)
+pointer=(1)(155)(0)(212)
